Fix broken styles on non-network tabs in popup mode

--- a/ui/app/pages/settings/index.scss
+++ b/ui/app/pages/settings/index.scss
@@ -76,8 +76,6 @@
       background-position: center;
       margin-right: 16px;
       cursor: pointer;
-      position: absolute;
-      margin-left: 10px;
     }
   }
 
